force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Route__c/TimeTrade_SF1__TimeTrade_Workflow_Route__c.object-meta.xml
<CustomObject>
    <description>Represents the mapping of a set of answer to an invitation for a TT Scheduler Workflow.</description>
    <label>TimeTrade Routing Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeTrade Routing Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>