force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Route__c/fields/TimeTrade_SF1__Criteria_Count__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Criteria_Count__c</fullName>
    <inlineHelpText>The number of required answers defined for this route.</inlineHelpText>
    <label>Criteria Count</label>
    <summaryForeignKey>TimeTrade_SF1__TimeTrade_Workflow_Answer__c.TimeTrade_SF1__TimeTrade_Workflow_Route__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>