force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Route__c/fields/TimeTrade_SF1__Priority__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>If more then one rule matches, the match with the highest priority is used.</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>