force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Route__c/fields/TimeTrade_SF1__TimeTrade_Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeTrade Invitation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TimeTrade_SF1__Invitation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Public Meeting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TimeTrade_SF1__Invitation__c</referenceTo>
    <relationshipLabel>TimeTrade Routing Routes</relationshipLabel>
    <relationshipName>TimeTrade_Schedule_Workflow_Route2</relationshipName>
    <type>Lookup</type>
</CustomField>