force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Route__c/fields/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Schedule_Workflow__c</fullName>
    <label>TimeTrade Routing Questionnaire</label>
    <referenceTo>TimeTrade_SF1__TimeTrade_Schedule_Workflow__c</referenceTo>
    <relationshipLabel>TimeTrade Routing Routes</relationshipLabel>
    <relationshipName>TimeTrade_Schedule_Workflow_Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>